// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AIStream OpenAIStream should be able to parse SSE and receive the streamed response 1`] = `
[
  "Hello",
  ",",
  " world",
  ".",
]
`;

exports[`AIStream OpenAIStream should be able to parse SSE and receive the streamed response 2`] = `
[
  {
    "choices": [
      {
        "delta": {
          "role": "assistant",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1686901302,
    "id": "chatcmpl-7RyNSW2BXkOQQh7NlBc65j5kX8AjC",
    "model": "gpt-3.5-turbo-0301",
    "object": "chat.completion.chunk",
  },
  {
    "choices": [
      {
        "delta": {
          "content": "Hello",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1686901302,
    "id": "chatcmpl-7RyNSW2BXkOQQh7NlBc65j5kX8AjC",
    "model": "gpt-3.5-turbo-0301",
    "object": "chat.completion.chunk",
  },
  {
    "choices": [
      {
        "delta": {
          "content": ",",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1686901302,
    "id": "chatcmpl-7RyNSW2BXkOQQh7NlBc65j5kX8AjC",
    "model": "gpt-3.5-turbo-0301",
    "object": "chat.completion.chunk",
  },
  {
    "choices": [
      {
        "delta": {
          "content": " world",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1686901302,
    "id": "chatcmpl-7RyNSW2BXkOQQh7NlBc65j5kX8AjC",
    "model": "gpt-3.5-turbo-0301",
    "object": "chat.completion.chunk",
  },
  {
    "choices": [
      {
        "delta": {
          "content": ".",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1686901302,
    "id": "chatcmpl-7RyNSW2BXkOQQh7NlBc65j5kX8AjC",
    "model": "gpt-3.5-turbo-0301",
    "object": "chat.completion.chunk",
  },
  {
    "choices": [
      {
        "delta": {},
        "finish_reason": "stop",
        "index": 0,
      },
    ],
    "created": 1686901302,
    "id": "chatcmpl-7RyNSW2BXkOQQh7NlBc65j5kX8AjC",
    "model": "gpt-3.5-turbo-0301",
    "object": "chat.completion.chunk",
  },
]
`;

exports[`AIStream OpenAIStream should handle backpressure on the server 1`] = `
[
  "Hello",
]
`;

exports[`AIStream OpenAIStream should handle backpressure on the server 2`] = `
[
  {
    "choices": [
      {
        "delta": {
          "role": "assistant",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1686901302,
    "id": "chatcmpl-7RyNSW2BXkOQQh7NlBc65j5kX8AjC",
    "model": "gpt-3.5-turbo-0301",
    "object": "chat.completion.chunk",
  },
  {
    "choices": [
      {
        "delta": {
          "content": "Hello",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1686901302,
    "id": "chatcmpl-7RyNSW2BXkOQQh7NlBc65j5kX8AjC",
    "model": "gpt-3.5-turbo-0301",
    "object": "chat.completion.chunk",
  },
]
`;
